<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.yczhangsjtu.daylog.EditScheduleActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/schedule_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_ok"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:labelFor="@+id/schedule_content"/>
        <EditText
            android:id="@+id/schedule_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_schedule_group"
            android:labelFor="@+id/schedule_group"/>
        <EditText
            android:id="@+id/schedule_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_schedule_group"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_start_time"/>
        <Button
            android:id="@+id/button_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_start_time"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_finish_time"/>
        <Button
            android:id="@+id/button_finish_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_finish_time"/>
    </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>
